--- a/backend_bookmark_app/.env
+++ b/backend_bookmark_app/.env
@@ -1,3 +1,4 @@
 PORT=5000
-MONGO_URI=mongodb+srv://ritiksharma555698:ritiksharma@cluster0.twj90.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://ritiksharma555598:bookmarkmern@cluster0.qtm6y.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=mySuperSecretKey123!
+
